# social-feed

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
account/: admin.py  authenticate.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact.py
account/templates/: 404.html  base.html
account/templates/account/: dashboard.html  login.html  register.html  register_done.html
account/templates/account/user/: detail.html  list.html
account/templates/registration/: login.html  password_reset_email.html
actions/: models.py  utils.py
actions/migrations/: 0001_initial.py
actions/templates/actions/action/: detail.html
common/: decorators.py
images/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes.py
images/templates/images/image/: create.html  detail.html  list.html
social_feed/: asgi.py  settings.py  urls.py  wsgi.py
