[tool.poetry]
name = "social-feed"
version = "0.1.0"
description = "An image-sharing social application"
authors = ["Marvin Kweyu <mkweyu1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "social_feed"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.0.*"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
